[tool.pdm]

[project]
name = "pdm-bug"
description = "testing"
authors = [
    {name = "onerandomusername", email = "me@arielle.codes"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dynamic = ['version']

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = [
    "pdm-bug/",
    "README.md",
    "pyproject.toml",
]

[tool.pdm.version]
source = "scm"