
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pdm_bug"
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ['version']

[project.optional-dependencies]

[tool.pdm.build]
includes = [
    "pdm_bug/",
]

[tool.pdm.version]
source = "scm"